--- a/semana01/package.json
+++ b/semana01/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx ./src/index.ts"
   },
@@ -12,6 +13,7 @@
   "dependencies": {
     "@types/node": "^22.4.1",
     "@types/readline-sync": "^1.4.8",
+    "date-fns": "^4.1.0",
     "readline-sync": "^1.4.10",
     "tsup": "^8.2.4",
     "tsx": "^4.17.0",
