--- a/semana08/package.json
+++ b/semana08/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
+    "json-server": "^1.0.0-beta.3",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
