--- a/semana12/package.json
+++ b/semana12/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "fastify": "^5.3.2"
+    "fastify": "^5.3.2",
+    "uuid": "^11.1.0"
   }
 }
