--- a/semana13/package.json
+++ b/semana13/package.json
@@ -15,7 +15,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.7.0",
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
+    "prisma": "^6.7.0",
     "uuid": "^11.1.0"
   }
 }
