--- a/semana13/.env
+++ b/semana13/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://postgres:senai@localhost:5432/todo_list?schema=public"
+
+JWT_SECRET = "6d7b30571d069ab164db61f8e4f8df704b8b02e5"
